--- a/src/components/question/questioncss.module.css
+++ b/src/components/question/questioncss.module.css
@@ -4,8 +4,8 @@
     box-sizing: border-box;
 }
 .questions{
- 
-  padding: 10%;
+ box-shadow: 0 0 10px rgb(0, 0, 0.2);
+
 
 }
 .questions h1{
@@ -13,6 +13,7 @@
     display: flex;
     justify-content: center;
     padding-bottom: 5%;
+    margin: auto;
 }
 .question{
     margin: auto;
@@ -21,5 +22,5 @@
     align-items: center; */
     padding:auto;
     padding-bottom: 10px;
-    box-shadow: 0 0 10px rgb(0, 0, 0.2);
+    /* box-shadow: 0 0 10px rgb(0, 0, 0.2); */
 }
